--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="img/meuAvatar.png" alt="avatar da Rafa" srcset="" />
-    <p>Eu sou Alexandra_</p>
+    <p>Eu sou Rafaele_</p>
     <h1>Eu ensino Programação</h1>
     <p>
       Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional
