--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 <body>
     <img src="img/meuAvatar.png" alt="avatar da Rafa" srcset="" />
     <p>Eu sou Rafaele_</p>
-    <h1>Eu ensino Programação</h1>
+    <h1>Eu aprendo sobre programação</h1>
     <p>
-      Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional
-      para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento
+      Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
       computacional usando HTML, CSS e JavaScript.
     </p>
     <p>Minhas habilidades</p>
     <div>
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>Scratch</p>
+        <p>gosto de ler</p>
+        <p>jogar vôlei</p>
+        <p>estudar</p>
+        <p>ouvir música</p>
       </div>
 </body>
 </html>
