--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <h1>Eu aprendo sobre programação</h1>
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
-      computacional usando HTML, CSS e JavaScript.
+      computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música, dormir, ir na academia, comer.
     </p>
     <p>Minhas habilidades</p>
     <div>
-        <p>gosto de ler</p>
-        <p>jogar vôlei</p>
-        <p>estudar</p>
-        <p>ouvir música</p>
+        <p>fazer as unhas</p>
+        <p>cozinhar</p>
+        <p>digitação</p>
+        <p>ágil</p>
       </div>
 </body>
 </html>
