--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>Eu aprendo sobre programação</h1>
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
-      computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música, dormir, ir na academia, comer.
+      computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música,
+       dormir, ir na academia, comer.
     </p>
     <p>Minhas habilidades</p>
     <div>
