--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Portfolio Rafa</title>
 </head>
 <body>
+  <header class="container text-center">
     <img src="img/meuAvatar.png" alt="avatar da Rafa" srcset="" />
     <p>Eu sou Rafaele_</p>
     <h1>Eu aprendo sobre programação</h1>
@@ -23,6 +24,7 @@
         <p>digitação</p>
         <p>ágil</p>
       </div>
+      </header>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
