--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
       computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música,
-       dormir, ir na academia, comer.
+       dormir, ir na academia, comer, quero cursar arquitetura ou engenharia.
     </p>
     <p>Minhas habilidades</p>
     <div>
