--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música,
        dormir, ir na academia, comer, quero cursar arquitetura ou engenharia.
     </p>
-    <p>Minhas habilidades</p>
+    <h1>Minhas habilidades</h1>
     <div>
         <p>fazer as unhas</p>
         <p>cozinhar</p>
