--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="container text-center">
-    <img src="img/meuAvatar.png" alt="avatar da Rafa" srcset="" />
+    <img src="img/meuAvatar.png" alt="avatar da Rafa" class="rounded-circle"  width="150"  srcset="" />
     <p>Eu sou Rafaele_</p>
     <h1>Eu aprendo sobre programação</h1>
     <p>
