--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="container text-center">
     <img src="img/meuAvatar.png" alt="avatar da Rafa" class="rounded-circle"  width="150"  srcset="" />
     <p>Eu sou Rafaele_</p>
-    <h1>Eu aprendo sobre programação</h1>
+    <h3>Estou aprendendo programação com o professora alexandra!</h3>
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
       computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música,
