--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="container text-center">
     <img src="img/meuAvatar.png" alt="avatar da Rafa" class="rounded-circle"  width="150"  srcset="" />
-    <p>Eu sou Rafaele_</p>
+    <p class="lead">Eu sou Rafaele_</p>
     <h3>Estou aprendendo programação com o professora alexandra!</h3>
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
