--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <header class="container text-center">
     <img src="img/meuAvatar.png" alt="avatar da Rafa" class="rounded-circle"  width="150"  srcset="" />
     <p class="lead">Eu sou Rafaele_</p>
-    <h3>Estou aprendendo programação com o professora alexandra!</h3>
+  <h2>Sobre mim:</h2>
+    <h5>Estou aprendendo programação com o professora alexandra!</h5>
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
       computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música,
