--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </p>
     <h5>Minhas habilidades</h5>
     <div>
-        <p>fazer as unhas</p>
-        <p>cozinhar</p>
-        <p>digitação</p>
-        <p>ágil</p>
+        <p class="badge text-bg-secondary">fazer as unhas</p>
+        <p class="badge text-bg-secondary">cozinhar</p>
+        <p class="badge text-bg-secondary">digitação</p>
+        <p class="badge text-bg-secondary">ágil</p>
       </div>
       </header>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
