--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>
       Sou aluna,estou aprendendo como criar um site no ensino médio, estou aprendendo pensamento
       computacional usando HTML, CSS e JavaScript, gosto de jogar vôlei, ler, escutar música,
-       dormir, ir na academia, comer, quero cursar arquitetura ou engenharia.
+       dormir, ir na academia, comer, quero cursar arquitetura ou engenharia, pretendo realizar todos os meus sonhos e viagens.
     </p>
     <h5>Minhas habilidades</h5>
     <div>
