--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="container text-center">
     <img src="img/meuAvatar.png" alt="avatar da Rafa" class="rounded-circle"  width="150"  srcset="" />
-    <p class="lead">Eu sou Rafaele_</p>
+    <p class="lead">Eu sou Rafaele</p>
   <h2>Sobre mim:</h2>
     <h5>Estou aprendendo programação com o professora alexandra!</h5>
     <p>
