--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         <p class="badge text-bg-secondary">ágil</p>
       </div>
       </header>
+      <main class="container">
+        <h2>Meus projetos</h2>
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="card" style=" width: 18rem;">
+            <img src="..." class="card-img-top" alt="..."/>
+            <div class="card-body"> 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
+</main>
