--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           <div class="card" style=" width: 18rem;">
             <img src="..." class="card-img-top" alt="..."/>
             <div class="card-body"> 
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text"> 
+                Projetos no Github
+              </p>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
