--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
               <p class="card-text"> 
                 Projetos no Github
               </p>
+              <a href="https://rafinha1712.github.io/portifolio2/" class="btn btn-primary"> Ir para o site</a>
+              </div>
+              </div>
+              </div>
+              </div>
+</main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
-</main>
