--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <main class="container">
         <h2>Meus projetos</h2>
         <div class="row">
-          <div class="col-md-4"></div>
-          <div class="card" style=" width: 18rem;">
-            <img src="..." class="card-img-top" alt="..."/>
+          <div class="col-md-4">
+          <div class="card">
+            <img src="img/projeto-1.png" class="card-img-top" alt="imagem de projeto da biblioteca virtual"/>
             <div class="card-body"> 
               <h5 class="card-title">Card title</h5>
               <p class="card-text"> 
