--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
           <div class="card">
             <img src="img/projeto-1.png" class="card-img-top" alt="imagem de projeto da biblioteca virtual"/>
             <div class="card-body"> 
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text"> 
-                Projetos no Github
-              </p>
+              <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+          <p class="card-text">
+           Este projeto é uma página web que apresenta uma lista dos meus livros
+      favoritos, incluindo informações sobre os autores, datas de publicação e
+      links para compra na Amazon. A página é estilizada com CSS para uma
+      visualização agradável e usa fontes externas do Google Fonts.
+          </p>
+
               <a href="https://rafinha1712.github.io/portifolio2/" class="btn btn-primary"> Ir para o site</a>
               </div>
               </div>
