--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       visualização agradável e usa fontes externas do Google Fonts.
           </p>
 
-              <a href="https://rafinha1712.github.io/portifolio2/" class="btn btn-primary"> Ir para o site</a>
+             <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
               </div>
               </div>
               </div>
