--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
               </div>
               </div>
               </div>
+               <div class="col-md-4">
+          <div class="card">
+            <img src="img/projeto-2.png" class="card-img-top" alt="imagem de projeto de uma jornada interativa"/>
+            <div class="card-body"> 
+              <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                            Artificial</h5>
+          <p class="card-text">
+          Este projeto é um jogo interativo baseado em navegador que explora o impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
+        pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
+        futuro da IA.
+          </p>
+
+             <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+              </div>
+              </div>
+              </div>
               </div>
 </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
