--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
               </div>
               </div>
               </div>
+               <div class="col-md-4">
+          <div class="card">
+            <img src="img/projeto-3.png" class="card-img-top" alt="imagem de projeto de uma jornada interativa"/>
+            <div class="card-body"> 
+              <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                          </h5>
+          <p class="card-text">
+         Este projeto Scratch cria uma experiência interativa educativa sobre
+        astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
+        forma da Terra através de cenários dinâmicos e diálogos informativos.
+          </p>
+
+             <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+              </div>
+              </div>
+              </div>
               </div>
 </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
